--- a/counting_objects/Counting the Objects.ipynb
+++ b/counting_objects/Counting the Objects.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,20 +41,22 @@
     "    \n",
     "    for c in cnts:\n",
     "        cv2.drawContours(output, [c], -1, (0, 0, 255), 2)\n",
-    "    print(f\"Objects fond: {len(cnts)}\")\n",
-    "    show(output)"
+    "    cv2.putText(output, f\"Found {len(cnts)} objects\", (15, 15), cv2.FONT_HERSHEY_DUPLEX, 0.5, (0, 255, 0), 2)\n",
+    "    print(f\"Objects found: {len(cnts)}\")\n",
+    "    show(output)\n",
+    "    cv2.imwrite(\"Objects_counted.png\", output)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Objects fond: 19\n"
+      "Objects found: 19\n"
      ]
     }
    ],
